--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "animate.css": "^3.7.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-pose": "^3.2.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
     "request-promise": "^4.2.2"
